--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>DOGGO</title>
     <link rel="stylesheet" href="index.css">
-    <script type="text/javascript" src="src/index.js"></script>
+    <script type="text/javascript" defer src="src/index.js"></script>
     <link rel="shortcut icon" href="doge.jpeg">
   </head>
   <body>
@@ -12,7 +12,7 @@
       <button id="good-dog-filter">Filter good dogs: OFF</button>
     </div>
     <div id="dog-bar">
-
+      <!-- dog span goes here -->
     </div>
     <div id="dog-summary-container">
       <h1>DOGGO:</h1>
